test/e2e/testdata/merge-gateways/basic-merge-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: merged-gateway-1
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: merge-gateways
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: merged-gateway-2
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: merge-gateways
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 8081
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: merged-gateway-3
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: merge-gateways
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 8082
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merged-gateway-route-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: merged-gateway-1
      sectionName: http
  hostnames:
    - "www.example1.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /merge1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merged-gateway-route-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: merged-gateway-2
      sectionName: http
  hostnames:
    - "www.example2.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v2
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /merge2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merged-gateway-route-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: merged-gateway-3
      sectionName: http
  hostnames:
    - "www.example3.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v3
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /merge3
